ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /v1/tasks/task
        pathType: Prefix
        backend:
          service:
            name: myproducer-service
            port:
              number: 5000
      - path: /v1/hello
        pathType: Prefix
        backend:
          service:
            name: hello-app-v1-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-rate-limit
  annotations:
    konghq.com/plugins: five-per-min
spec:
  selector:
    app: hello-app-v1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myproducer-rate-limit
  annotations:
    konghq.com/plugins: five-per-min
spec:
  selector:
    app: myproducer
  ports:
  - port: 80
    targetPort: 5000
